retrieveUnpackaged/objects/timesheet__c.object
<CustomObject>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Half__c</fullName>
        <label>First Half</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Public Holiday</fullName>
                </value>
                <value>
                    <fullName>Weekend</fullName>
                </value>
                <value>
                    <fullName>Field Day</fullName>
                </value>
                <value>
                    <fullName>State sales Meeting</fullName>
                </value>
                <value>
                    <fullName>Client Training/Conference</fullName>
                </value>
                <value>
                    <fullName>Ascott Meeting</fullName>
                </value>
                <value>
                    <fullName>Annual Leave</fullName>
                </value>
                <value>
                    <fullName>Sick Leave</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Second_Half__c</fullName>
        <label>Second Half</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Public Holiday</fullName>
                </value>
                <value>
                    <fullName>Weekend</fullName>
                </value>
                <value>
                    <fullName>Field Day</fullName>
                </value>
                <value>
                    <fullName>State sales Meeting</fullName>
                </value>
                <value>
                    <fullName>Client Training/Conference</fullName>
                </value>
                <value>
                    <fullName>Ascott Meeting</fullName>
                </value>
                <value>
                    <fullName>Annual Leave</fullName>
                </value>
                <value>
                    <fullName>Sick Leave</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Statuscheck__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Statuscheck</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>timesheets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>dayname__c</fullName>
        <formula>CASE( MOD( Date__c - DATE(1900, 1, 7), 7), 0, &quot;Sunday&quot;, 1, &quot;Monday&quot;, 2, &quot;Tuesday&quot;, 3, &quot;Wednesday&quot;, 4, &quot;Thursday&quot;, 5, &quot;Friday&quot;, 6, &quot;Saturday&quot;,&quot;Error&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>dayname</label>
        <type>Text</type>
    </fields>
    <label>timesheet</label>
    <nameField>
        <displayFormat>T-{0000}</displayFormat>
        <label>timesheet Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>timesheets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>